--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -2,7 +2,7 @@
   background-color: var(--primary-color);
   position: fixed;
   display: grid;
-  grid-template-rows: repeat(11, 1fr);
+  grid-template-rows: repeat(12, 1fr);
   grid-template-columns: 1fr;
   align-items: stretch;
   justify-items: stretch;
@@ -14,6 +14,7 @@
   border-right: solid 3px var(--accent-color);
   transform: translateX(-100%);
   transition: transform 0.4s ease-in-out;
+  overflow: hidden;
 }
 
 .sidebar.active {
@@ -44,13 +45,24 @@
   background-color: var(--secondary-color);
   border: dotted 2px var(--primary-color);
   color: var(--black-text-color);
-  font-size: 16px;
+  font-size: clamp(5px, 4vw, 17px);
+  box-sizing: border-box;
+  white-space: normal;
+  word-break: break-word;
   cursor: pointer;
   border-radius: 2px;
+  display: inline-block;
 }
 
 .sidebar-button:hover {
   opacity: 90%;
+}
+
+.location-dropdown {
+  background-color: var(--accent-color);
+  width: 100%;
+  height: 95%;
+  font-size: clamp(5px, 4vw, 17px);
 }
 
 .screen-overlay {
